--- a/src/peerblock/pb.rc
+++ b/src/peerblock/pb.rc
@@ -394,31 +394,31 @@ IDD_SETTINGS_SECOND DIALOGEX 0, 0, 343, 181
 STYLE DS_SETFONT | DS_FIXEDSYS | WS_CHILD
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    GROUPBOX        "Startup",IDC_STATIC,5,5,333,28
-    CONTROL         "Start with Windows",IDC_STARTWITHWINDOWS,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,16,78,10
-    CONTROL         "Always start hidden",IDC_STARTMINIMIZED,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,113,16,79,10
-    CONTROL         "Show splash",IDC_SHOWSPLASH,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,214,16,55,10
+    GROUPBOX        "Startup",IDC_STATIC,5,5,333,30
+    CONTROL         "Start with Windows",IDC_STARTWITHWINDOWS,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,16,88,12
+    CONTROL         "Always start hidden",IDC_STARTMINIMIZED,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,113,16,97,12
+    CONTROL         "Show splash",IDC_SHOWSPLASH,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,226,16,105,12
     GROUPBOX        "Updates",IDC_STATIC,5,42,333,75
-    CONTROL         "Check PeerBlock",IDC_CHECKPB,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,13,53,81,14
-    CONTROL         "Check Lists",IDC_CHECKLISTS,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,106,53,51,14
-    CONTROL         "Auto-update every",IDC_AUTOUPDATE,"Button",BS_AUTOCHECKBOX | WS_DISABLED | WS_TABSTOP,198,53,77,14
-    EDITTEXT        IDC_AUTOUPDATETIME,278,53,28,14,ES_AUTOHSCROLL | WS_DISABLED
-    CONTROL         "",IDC_AUTOUPDATETIMESPIN,"msctls_updown32",UDS_SETBUDDYINT | UDS_ALIGNRIGHT | UDS_ARROWKEYS | WS_DISABLED,301,53,10,14
-    LTEXT           "Days",IDC_STATIC,313,53,17,14,SS_CENTERIMAGE
-    CONTROL         "Use proxy:",IDC_USEPROXY,"Button",BS_AUTOCHECKBOX | WS_DISABLED | WS_TABSTOP,14,76,51,10
+    CONTROL         "Check PeerBlock",IDC_CHECKPB,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,53,82,12
+    CONTROL         "Check Lists",IDC_CHECKLISTS,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,113,53,66,12
+    CONTROL         "Auto-update every",IDC_AUTOUPDATE,"Button",BS_AUTOCHECKBOX | WS_DISABLED | WS_TABSTOP,198,53,77,12
+    EDITTEXT        IDC_AUTOUPDATETIME,278,51,28,14,ES_AUTOHSCROLL | WS_DISABLED
+    CONTROL         "",IDC_AUTOUPDATETIMESPIN,"msctls_updown32",UDS_SETBUDDYINT | UDS_ALIGNRIGHT | UDS_ARROWKEYS | WS_DISABLED,301,51,10,14
+    LTEXT           "Days",IDC_STATIC,313,53,17,12,SS_CENTERIMAGE
+    CONTROL         "Use proxy:",IDC_USEPROXY,"Button",BS_AUTOCHECKBOX | WS_DISABLED | WS_TABSTOP,12,75,52,12
     EDITTEXT        IDC_PROXYHOST,67,75,129,14,ES_AUTOHSCROLL | WS_DISABLED
-    LTEXT           "Type:",IDC_STATIC,221,75,20,14,SS_CENTERIMAGE
-    CONTROL         "HTTP",IDC_HTTP,"Button",BS_AUTORADIOBUTTON | WS_DISABLED | WS_GROUP,249,75,33,14
-    CONTROL         "Socks5",IDC_SOCKS5,"Button",BS_AUTORADIOBUTTON | WS_DISABLED,291,75,38,14
-    CONTROL         "Auto-close update window after",IDC_AUTOCLOSE,"Button",BS_AUTOCHECKBOX | WS_DISABLED | WS_TABSTOP,14,96,119,14
-    EDITTEXT        IDC_AUTOCLOSETIME,137,96,27,14,ES_AUTOHSCROLL | WS_DISABLED
-    CONTROL         "",IDC_AUTOCLOSETIMESPIN,"msctls_updown32",UDS_SETBUDDYINT | UDS_ALIGNRIGHT | UDS_ARROWKEYS | WS_DISABLED,157,97,10,14
-    LTEXT           "Seconds",IDC_STATIC,171,96,29,14,SS_CENTERIMAGE
-    CONTROL         "Update at startup",IDC_UPDATE_AT_STARTUP,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,217,96,119,14
-    GROUPBOX        "Miscellaneous",IDC_STATIC,5,123,333,28
-    CONTROL         "Always hide tray icon",IDC_HIDETRAY,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,135,84,10
-    CONTROL         "Minimize to tray on close",IDC_HIDEONCLOSE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,114,135,94,10
-    CONTROL         "Keep PeerBlock on top",IDC_ONTOP,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,226,135,100,10
+    LTEXT           "Type:",IDC_STATIC,221,75,20,12,SS_CENTERIMAGE
+    CONTROL         "HTTP",IDC_HTTP,"Button",BS_AUTORADIOBUTTON | WS_DISABLED | WS_GROUP,249,75,33,12
+    CONTROL         "Socks5",IDC_SOCKS5,"Button",BS_AUTORADIOBUTTON | WS_DISABLED,291,75,38,12
+    CONTROL         "Auto-close update window after",IDC_AUTOCLOSE,"Button",BS_AUTOCHECKBOX | WS_DISABLED | WS_TABSTOP,12,96,121,12
+    EDITTEXT        IDC_AUTOCLOSETIME,137,94,27,14,ES_AUTOHSCROLL | WS_DISABLED
+    CONTROL         "",IDC_AUTOCLOSETIMESPIN,"msctls_updown32",UDS_SETBUDDYINT | UDS_ALIGNRIGHT | UDS_ARROWKEYS | WS_DISABLED,157,95,10,14
+    LTEXT           "Seconds",IDC_STATIC,171,96,29,12,SS_CENTERIMAGE
+    CONTROL         "Update at startup",IDC_UPDATE_AT_STARTUP,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,226,96,105,12
+    GROUPBOX        "Miscellaneous",IDC_STATIC,5,123,333,30
+    CONTROL         "Always hide tray icon",IDC_HIDETRAY,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,135,84,12
+    CONTROL         "Minimize to tray on close",IDC_HIDEONCLOSE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,113,135,95,12
+    CONTROL         "Keep PeerBlock on top",IDC_ONTOP,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,226,135,105,12
     PUSHBUTTON      "&Save",IDC_SAVE,5,186,50,14
 END
 
@@ -627,6 +627,9 @@ BEGIN
     BEGIN
         LEFTMARGIN, 5
         RIGHTMARGIN, 338
+        VERTGUIDE, 12
+        VERTGUIDE, 113
+        VERTGUIDE, 226
         TOPMARGIN, 5
         BOTTOMMARGIN, 176
     END
