--- a/src/pbfilter/pbfilter.vcproj
+++ b/src/pbfilter/pbfilter.vcproj
@@ -201,8 +201,8 @@
 		<Configuration
 			Name="Release|Win32"
 			OutputDirectory="$(SolutionDir)$(PlatformName)\$(ConfigurationName)"
-			IntermediateDirectory="$(SolutionDir)Intermediate\obj\$(ConfigurationName) $(PlatformName)\$(ProjectName)\"
 			ConfigurationType="1"
+			InheritedPropertySheets="..\..\build\windows\common.vsprops;..\..\build\windows\release.vsprops"
 			CharacterSet="1"
 			ManagedExtensions="0"
 			WholeProgramOptimization="1"
@@ -224,20 +224,11 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
-				AdditionalOptions="/MP"
-				Optimization="2"
-				InlineFunctionExpansion="2"
-				EnableIntrinsicFunctions="true"
-				FavorSizeOrSpeed="1"
-				OmitFramePointers="true"
 				AdditionalIncludeDirectories="$(PB_DDK_DIR)\inc\api;$(PB_DDK_DIR)\inc\crt;$(PB_DDK_DIR)\inc\ddk"
 				PreprocessorDefinitions="WIN32;NDEBUG;_X86_;_WIN2K_COMPAT_SLIST_USAGE"
 				IgnoreStandardIncludePath="true"
-				StringPooling="true"
 				ExceptionHandling="0"
-				RuntimeLibrary="0"
 				BufferSecurityCheck="false"
-				EnableFunctionLevelLinking="true"
 				WarningLevel="3"
 				WarnAsError="true"
 				CallingConvention="2"
@@ -262,8 +253,6 @@
 				GenerateDebugInformation="true"
 				SubSystem="3"
 				Driver="1"
-				OptimizeReferences="2"
-				EnableCOMDATFolding="2"
 				EntryPointSymbol="DriverEntry"
 				RandomizedBaseAddress="0"
 				DataExecutionPrevention="0"
@@ -294,8 +283,8 @@
 		<Configuration
 			Name="Release|x64"
 			OutputDirectory="$(SolutionDir)$(PlatformName)\$(ConfigurationName)"
-			IntermediateDirectory="$(SolutionDir)Intermediate\obj\$(ConfigurationName) $(PlatformName)\$(ProjectName)\"
 			ConfigurationType="1"
+			InheritedPropertySheets="..\..\build\windows\common.vsprops;..\..\build\windows\release.vsprops"
 			CharacterSet="1"
 			ManagedExtensions="0"
 			WholeProgramOptimization="1"
@@ -318,19 +307,10 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
-				AdditionalOptions="/MP"
-				Optimization="2"
-				InlineFunctionExpansion="2"
-				EnableIntrinsicFunctions="true"
-				FavorSizeOrSpeed="1"
-				OmitFramePointers="true"
 				AdditionalIncludeDirectories="$(PB_DDK_DIR)\inc\api;$(PB_DDK_DIR)\inc\crt;$(PB_DDK_DIR)\inc\ddk"
 				PreprocessorDefinitions="NDEBUG;_AMD64_;WIN64"
-				StringPooling="true"
 				ExceptionHandling="0"
-				RuntimeLibrary="0"
 				BufferSecurityCheck="false"
-				EnableFunctionLevelLinking="true"
 				WarningLevel="3"
 				WarnAsError="true"
 				CallingConvention="1"
@@ -355,8 +335,6 @@
 				GenerateDebugInformation="true"
 				SubSystem="3"
 				Driver="1"
-				OptimizeReferences="2"
-				EnableCOMDATFolding="2"
 				EntryPointSymbol="DriverEntry"
 				RandomizedBaseAddress="0"
 				DataExecutionPrevention="0"
@@ -387,8 +365,8 @@
 		<Configuration
 			Name="Release (Vista)|Win32"
 			OutputDirectory="$(SolutionDir)$(PlatformName)\$(ConfigurationName)"
-			IntermediateDirectory="$(SolutionDir)Intermediate\obj\$(ConfigurationName) $(PlatformName)\$(ProjectName)\"
 			ConfigurationType="1"
+			InheritedPropertySheets="..\..\build\windows\common.vsprops;..\..\build\windows\release.vsprops"
 			CharacterSet="1"
 			ManagedExtensions="0"
 			WholeProgramOptimization="1"
@@ -410,20 +388,11 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
-				AdditionalOptions="/MP"
-				Optimization="2"
-				InlineFunctionExpansion="2"
-				EnableIntrinsicFunctions="true"
-				FavorSizeOrSpeed="1"
-				OmitFramePointers="true"
 				AdditionalIncludeDirectories="$(PB_DDK_DIR)\inc\api;$(PB_DDK_DIR)\inc\crt;$(PB_DDK_DIR)\inc\ddk"
 				PreprocessorDefinitions="WIN32;NDEBUG;_X86_"
 				IgnoreStandardIncludePath="false"
-				StringPooling="true"
 				ExceptionHandling="0"
-				RuntimeLibrary="0"
 				BufferSecurityCheck="false"
-				EnableFunctionLevelLinking="true"
 				WarningLevel="3"
 				WarnAsError="true"
 				CallingConvention="2"
@@ -448,8 +417,6 @@
 				GenerateDebugInformation="true"
 				SubSystem="3"
 				Driver="1"
-				OptimizeReferences="2"
-				EnableCOMDATFolding="2"
 				EntryPointSymbol="DriverEntry"
 				RandomizedBaseAddress="0"
 				DataExecutionPrevention="0"
@@ -480,8 +447,8 @@
 		<Configuration
 			Name="Release (Vista)|x64"
 			OutputDirectory="$(SolutionDir)$(PlatformName)\$(ConfigurationName)"
-			IntermediateDirectory="$(SolutionDir)Intermediate\obj\$(ConfigurationName) $(PlatformName)\$(ProjectName)\"
 			ConfigurationType="1"
+			InheritedPropertySheets="..\..\build\windows\common.vsprops;..\..\build\windows\release.vsprops"
 			CharacterSet="1"
 			ManagedExtensions="0"
 			WholeProgramOptimization="1"
@@ -504,19 +471,10 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
-				AdditionalOptions="/MP"
-				Optimization="2"
-				InlineFunctionExpansion="2"
-				EnableIntrinsicFunctions="true"
-				FavorSizeOrSpeed="1"
-				OmitFramePointers="true"
 				AdditionalIncludeDirectories="$(PB_DDK_DIR)\inc\api;$(PB_DDK_DIR)\inc\crt;$(PB_DDK_DIR)\inc\ddk"
 				PreprocessorDefinitions="NDEBUG;_AMD64_;WIN64"
-				StringPooling="true"
 				ExceptionHandling="0"
-				RuntimeLibrary="0"
 				BufferSecurityCheck="false"
-				EnableFunctionLevelLinking="true"
 				WarningLevel="3"
 				WarnAsError="true"
 				CallingConvention="1"
@@ -541,8 +499,6 @@
 				GenerateDebugInformation="true"
 				SubSystem="3"
 				Driver="1"
-				OptimizeReferences="2"
-				EnableCOMDATFolding="2"
 				EntryPointSymbol="DriverEntry"
 				RandomizedBaseAddress="0"
 				DataExecutionPrevention="0"
